# GEAR

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  launch.vs.json
.github/workflows/: ci.yml
Assets/: EmbedFileAsHeader.cmake  Gear.rc
Assets/Fonts/: ImGuiFontEmbedding.cmake
Assets/Icons/: Gear.icns  Gear.rc
Docs/: DEVELOPMENT.md  TESTING.md
Src/: CMakeLists.txt  Main.cpp
Src/Application/: Application.cpp  Application.h
Src/GUI/: GuiArchitecture.md  GuiIconListViewer.cpp  GuiIconListViewer.h  GuiLayer.cpp  GuiLayer.h  GuiMath.h
Src/Logger/: CircularLogBuffer.h  LogMessage.h  LogToFile.h  Logger.cpp  Logger.h  Logger.md
Src/Platform/: WindowRegistry.cpp  WindowRegistry.h
Src/Platform/Mac/: MacTitlebar  MacTitlebar.h  MacTitlebar.mm
Src/Platform/Windows/: WinBorderless.cpp  WinBorderless.h
Tests/: CMakeLists.txt  LoggerTest.cpp
enc_temp_folder/1977199e46474c46297fb847ead06b/: Logger.h
enc_temp_folder/30654ff1593c9e47a0952b59cd671f52/: README.md
enc_temp_folder/4d86acd232ff6151375c436aa8fab24b/: README.md
